fix: remove project's manager_id
