# api/swagger.yaml
@@ -652,9 +652,6 @@ definitions:
       end_date:
         description: 結束日期
         type: string
-      manager_id:
-        description: 負責人ID
-        type: string
       project_name:
         description: 名稱
         type: string
@@ -848,9 +845,6 @@ definitions:
         type: string
       end_date:
         description: 結束日期
-        type: string
-      manager_id:
-        description: 負責人ID
         type: string
       project_name:
         description: 名稱
